<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/view_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8FAFF"
            android:orientation="vertical">

            <com.github.florent37.shapeofview.shapes.RoundRectView
                android:id="@+id/view_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shape_roundRect_borderColor="#73809B"
                app:shape_roundRect_borderWidth="0dp"
                app:shape_roundRect_bottomLeftRadius="0dp"
                app:shape_roundRect_bottomRightRadius="0dp"
                app:shape_roundRect_topLeftRadius="0dp"
                app:shape_roundRect_topRightRadius="0dp">

                <com.ivankocijan.magicviews.views.MagicTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F8FAFF"
                    android:gravity="center"
                    android:text="@string/tv_wallet_010"
                    android:textColor="#1C2D51"
                    android:textSize="18sp"
                    app:typeFace="HelveticaNeue_Regular.otf" />

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="13dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_back" />
            </com.github.florent37.shapeofview.shapes.RoundRectView>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#EDEDED"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_toolbar" />

            <com.ivankocijan.magicviews.views.MagicTextView
                android:id="@+id/et_bank_name"
                style="@style/EdittextStyle"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:drawableEnd="@drawable/ic_more"
                android:hint="@string/tv_wallet_044"
                app:typeFace="HelveticaNeue_Light.otf" />

            <com.ivankocijan.magicviews.views.MagicEditText
                android:id="@+id/et_bank_branch"
                style="@style/EdittextStyle"
                android:layout_marginBottom="16dp"
                android:drawableEnd="@drawable/ic_edit"
                android:hint="@string/tv_wallet_045"
                android:inputType="textPersonName"
                app:typeFace="HelveticaNeue_Light.otf" />

            <com.ivankocijan.magicviews.views.MagicTextView
                android:id="@+id/et_zone"
                style="@style/EdittextStyle"
                android:layout_marginBottom="16dp"
                android:drawableEnd="@drawable/ic_more"
                android:hint="@string/tv_wallet_046"
                app:typeFace="HelveticaNeue_Light.otf" />

            <com.ivankocijan.magicviews.views.MagicEditText
                android:id="@+id/et_name"
                style="@style/EdittextStyle"
                android:layout_marginBottom="16dp"
                android:drawableEnd="@drawable/ic_edit"
                android:hint="@string/tv_wallet_047"
                android:inputType="textPersonName"
                app:typeFace="HelveticaNeue_Light.otf" />

            <com.ivankocijan.magicviews.views.MagicEditText
                android:id="@+id/et_bank_number"
                style="@style/EdittextStyle"
                android:layout_marginBottom="16dp"
                android:drawableEnd="@drawable/ic_edit"
                android:hint="@string/tv_wallet_048"
                android:inputType="textPersonName"
                app:typeFace="HelveticaNeue_Light.otf" />

            <com.ivankocijan.magicviews.views.MagicTextView
                android:id="@+id/et_birthday"
                style="@style/EdittextStyle"
                android:layout_marginBottom="16dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:hint="@string/tv_wallet_049"
                android:inputType="textPersonName"
                app:typeFace="HelveticaNeue_Light.otf" />

            <com.ivankocijan.magicviews.views.MagicButton
                android:id="@+id/bt_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/gradient_6dp"
                android:elevation="1dp"
                android:gravity="center"
                android:paddingStart="118dp"
                android:paddingTop="16dp"
                android:paddingEnd="118dp"
                android:paddingBottom="14dp"
                android:text="@string/tv_register_013"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/magicTextView11"
                app:typeFace="HelveticaNeue_Medium.otf" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>